modificacion APP_URL

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:T2mwuJrG+6OcXoyiKNKHHP4AEYQ94DuCCSPSYizDVGU=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost/TramitesOnline/public
 
 LOG_CHANNEL=stack
 
